--- a/anokha/index.html
+++ b/anokha/index.html
@@ -13,7 +13,7 @@ background-size:cover;
 }
 </style>
 <body>
-<img src="D:/SEM-3/USER INTERFACE DESIGN/anokha/images/amrita.png">
+<img src="../anokha/images/amrita.png">
 <h2 style="color:red"><br>  
 <center><h1><u>Anokha Techfest 2023 Registration Form</u></h1></center>
 <br>
