--- a/anokha/index.html
+++ b/anokha/index.html
@@ -74,7 +74,7 @@ payment :
 ₹3000&nbsp&nbsp&nbsp
 <button type="submit">Pay</button>
 <br><br><br><center>
- <button type="submit" onclick="window.location.href='D:/SEM-3/USER INTERFACE DESIGN/anokha/html/Login.html'">Submit</button>
+ <button type="submit" onclick="window.location.href='../anokha/html/Login.html'">Submit</button>
 </center>
 </form>  
 </h2></body>  
