--- a/anokha/html/login.html
+++ b/anokha/html/login.html
@@ -44,7 +44,7 @@ button {
 </style>   
 </head>    
 <body>
-	<img src="D:/SEM-3/USER INTERFACE DESIGN/anokha/images/amrita.png">
+	<img src="../anokha/images/amrita.png">
     <center style="font-size:70px""> Login Window</h1> </center>   
     <form>  
         <div class="container">   
@@ -52,7 +52,7 @@ button {
             <input type="text" placeholder="Enter Username" name="username" required>  
             <label>Password : </label>   
             <input type="password" placeholder="Enter Password" name="password" required>  
-            <button type="submit" onclick="window.location.href='D:/SEM-3/USER INTERFACE DESIGN/Anokha/html/home.html'">Login</button>   
+            <button type="submit" onclick="window.location.href='../Anokha/html/home.html'">Login</button>   
             <input type="checkbox" checked="checked"> Remember me   
             <button type="button" class="cancelbtn"> Cancel</button>   
             Forgot <a href="#"> password? </a>   
