--- a/anokha/html/login.html
+++ b/anokha/html/login.html
@@ -44,7 +44,7 @@ button {
 </style>   
 </head>    
 <body>
-	<img src="../anokha/images/amrita.png">
+	<img src="../images/amrita.png">
 	<center style="font-size:70px""> Login Window</h1> </center>   
     <form>  
         <div class="container">   
