--- a/anokha/html/home.html
+++ b/anokha/html/home.html
@@ -178,7 +178,7 @@
 
 <body>
 	<br>
-	<img src="../anokha/images/amrita.png">
+	<img src="../images/amrita.png">
 	<section>
 		<div class="leftBox">
 			<div class="content">
