--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -10,14 +10,14 @@
 	background-size:cover;
 	}
 	</style>
-	<body background="D:/SEM-3/USER INTERFACE DESIGN/Personal_website/images/back.jpg">
+	<body background="../images/back.jpg">
 		<br><br><br>
 		<center style="font-size:120px">
 		Welcome To My Profile
 		</center><br><br><p>
 		<center style="font-size:30px"><b>
-		&nbsp&nbsp&nbspFor About Me: <a href="D:/SEM-3/USER INTERFACE DESIGN/Personal_website/html/about.html">Click here</a> <br><br>
-		For Resume: <a href="D:/SEM-3/USER INTERFACE DESIGN/Personal_website/html/resume.html">Click here</a><br><br>
+		&nbsp&nbsp&nbspFor About Me: <a href="../html/about.html">Click here</a> <br><br>
+		For Resume: <a href="../html/resume.html">Click here</a><br><br>
 		</p>
 		<p style="margin-top:9%">
 		My Social Links:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<br>
