--- a/Anokha 2023/html/login.html
+++ b/Anokha 2023/html/login.html
@@ -54,7 +54,9 @@
 				<label>Password : </label>   
 				<input type="password" placeholder="Enter Password" name="password" required>  
 				<a href="../index.html"><button type="button">Login</button></a>     
-				<a href="../index.html"><button type="button">Back to home</button></a>     
+				<a href="../index.html"><button type="button">Back to home</button></a>  
+				Don't have an account? 
+				<a href="register.html"><button type="button">Click here for Registering</button></a>
 			</div>
 		</center>
 		</form>     
