--- a/Anokha 2023/html/register.html
+++ b/Anokha 2023/html/register.html
@@ -90,8 +90,8 @@
 			<div class="box">
           <label for="College Name" class="fl fontLabel"> College Name: </label>
     			<div class="fr">
-    					<input type="text" name="College Name" placeholder="College Name"
-              class="textBox" autofocus="on" required>
+    					<input type="text" name="College Name" placeholder="College Name" value="Amrita Vishwa Vidyapeetham"
+              class="textBox" autofocus="on" disabled>
     			</div>
     			<div class="clr"></div>
     		</div>
