--- a/Anokha 2023/html/register.html
+++ b/Anokha 2023/html/register.html
@@ -90,7 +90,7 @@
 			<div class="box">
           <label for="College Name" class="fl fontLabel"> College Name: </label>
     			<div class="fr">
-    					<input type="text" name="College Name" placeholder="College Name" value="Amrita Vishwa Vidyapeetham"
+    					<input type="text" name="College Name" placeholder="College Name"  style = "color:white;" value="Amrita Vishwa Vidyapeetham"
               class="textBox" autofocus="on" disabled>
     			</div>
     			<div class="clr"></div>
