--- a/anokha/index.html
+++ b/anokha/index.html
@@ -639,7 +639,7 @@
                 <h5 class="card-title text-muted text-uppercase text-center">If you are not a Student of Amrita</h5>
 				<h6 class="card-title text-muted text-uppercase text-center">Amount to be paid: <b>5000</b></h6>
                 <div class="text-center">
-					<a href="../Anokha%202023/html/register.html"><button type="button" class="btn">Register</button></a>
+					<a href="../Anokha%202023/html/otregister.html"><button type="button" class="btn">Register</button></a>
                 </div>
               </div>
             </div>
