--- a/anokha/html/login.html
+++ b/anokha/html/login.html
@@ -7,7 +7,7 @@
 		<style>   
 		Body {  
 		  font-family: Calibri, Helvetica, sans-serif; 
-		  background: url(https://img.freepik.com/free-vector/gradient-abstract-geometric-background_23-2149120339.jpg?size=626&ext=jpg) no-repeat center fixed;
+		  background: url(../img/bg.jpg) no-repeat center fixed;
 		  background-size: cover;
 		}  
 		button {   
