--- a/anokha/index.html
+++ b/anokha/index.html
@@ -666,14 +666,14 @@
 			Coimbatore- 641 112,<br>
 			Tamil Nadu, India<br>
               <strong>Phone:</strong> 044 48133323<br>
-              <strong>Email To:</strong> admissionasas@cb.amrita.edu<br>
+                        anokha.amrita.edu<br>
             </p>
 
             <div class="social-links">
               <a href="https://www.facebook.com/anokha.amrita/" class="facebook"><i class="fa fa-facebook"></i></a>
               <a href="https://www.instagram.com/anokhatechfest/" class="instagram"><i class="fa fa-instagram"></i></a>
               <a href="https://www.linkedin.com/school/anokha-amrita/about/" class="linkedin"><i class="fa fa-linkedin"></i></a>
-			  <a href="https://twitter.com/anokha_techfest?lang=en" class="twitter"><i class="fa fa-twitter"></i></a>
+	      <a href="https://twitter.com/anokha_techfest?lang=en" class="twitter"><i class="fa fa-twitter"></i></a>
             </div>
 
           </div>
@@ -684,7 +684,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>PENUGONDA V S GANASEKHAR</strong>. All Rights Reserved
+        &copy; Copyright <strong>PENUGONDA V S GANASEKHAR, II B.Tech CSE (CYS) ANOKHA 2023</strong>. All Rights Reserved
     </div>
   </footer>
 
